Fixed overflow issue that hid content.

--- a/src/sass/components/index.scss
+++ b/src/sass/components/index.scss
@@ -614,6 +614,7 @@
             width              : 100%;
             position: relative;
             right: -1em;
+            background-image: none !important;
         }
 
         .nav_box.active {
