--- a/src/sass/utilities/basic.scss
+++ b/src/sass/utilities/basic.scss
@@ -1,12 +1,11 @@
 html {
     font-size  : 16px;
     font-family: 'Montserrat', sans-serif;
-    overflow-x: hidden;
 }
 
 body {
-    margin       : auto;
-    overflow: hidden;
+    margin    : auto;
+    overflow-x: hidden;
 }
 
 a {
